fix: layout broke when displayed for 6 weeks

--- a/src/components/air-datepicker/air-datepicker.scss
+++ b/src/components/air-datepicker/air-datepicker.scss
@@ -5,12 +5,11 @@
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.25);
   border-radius: 4px;
   box-sizing: border-box;
-  font-family: 'Open Sans', Montserrat, sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 12px;
   line-height: 15px;
   color: $textColor_50;
-  width: 320px;
-  height: 369px;
+  min-width: 320px;
   z-index: 1500;
 
   &__arrow {
@@ -25,6 +24,12 @@
     &_forward::before {
       content: '\e5c8';
     }
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px 20px;
   }
 }
 
